<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="First"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/home_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:gravity="center"
            android:hint="Type some text here" />

        <Button
            android:id="@+id/firstButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="Go to Other View" />
    </LinearLayout>

</RelativeLayout>